# LawFirm-os-exceptions-lake-runtime

./: .digital-asset-directory.yml  .gitignore  AGENTS.md  AI_TABLE_OF_CONTENTS.md  AI_WORK_START_HERE.md  DATA_FLOW_MAP.md  DIGITAL_ASSET_DIRECTORY_HANDOFF.md  ENDPOINTS_AND_COMMANDS.md  LICENSE.md  README.md  RECENT_WORK.md  ci-test-manifest.json  contracts.lock.json  pyproject.toml  skill-agent-manifest.json
config/: validation-runtime-policy.yaml
docs/: CANONICAL_ROUTE_MAPPING.md  INTAKE_LAKE_ADMISSION_REVIEW.md  LEGAL_KNOWLEDGE_EVENTS.md  LEGAL_KNOWLEDGE_RESEARCH_DELTA_EVENTS.md  LOCAL_DEV.md  NEXT_CONNECTORS.md  NON_SYNTHETIC_DATA_READINESS_CHECKLIST.md  RUNTIME_BOUNDARY.md  RUNTIME_HANDOFF.md  SHANNON_ERROR_CORRECTION_AND_EXCEPTION_LAKE.md  SKILL_AGENT_EVENTS.md  SKILL_QUALITY_EVENTS.md
examples/: legal_document_integrity_check_event.json  legal_knowledge_retrieval_trace_event.json  non_synthetic_readiness.example.json  skill_agent_lifecycle_event.json  skill_quality_event.json  synthetic_exception_event.json
registry/: intake-lake-admission-review-registry.json
scripts/: ci_check_contract_lock.py  run_full_pytest.py  update_contract_lock.py  validate_governance_dependency_map_mirror.py  validate_intake_lake_admission_review.py  validate_intake_lake_admission_review_packet.py
tests/: _substrate_path.py  conftest.py  test_central_admission.py  test_cli.py  test_contract_loader.py  test_contract_surface_git_validation.py  test_contract_surface_locking.py  test_defect_to_acceptance_tests.py  test_eval_candidate_minting.py  test_event_ingestion.py  (+12 more)
(+57 files in other folders)
