[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceptions-lake-runtime"
version = "0.1.0"
description = "Library-first MVP runtime for synthetic Exceptions Lake intake and governed contract validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
exceptions-lake = "exceptions_lake_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:cacheprovider"
